[build-system]
requires = [ "setuptools", "numpy" ]
build-backend = "setuptools.build_meta"

[project]
name = "acor"
description = "Estimate the autocorrelation time of a time series quickly."
dependencies = [ "numpy" ]
authors = [
    { name = "Daniel Foreman-Mackey", email = "danfm@nyu.edu" },
    { name = "Jonathan Goodman" },
]
license = { text = "MIT" }
version="1.1.1"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

[project.urls]
repository = "http://github.com/dfm/acor"
